# Autonomous

./: .gitignore  README.md  fsoco.yaml
Python Code/: ConeDetection.py
Python Detection Code/: ConeDetection.py  ConvertToYOLO.py  WebcamDetection.py
URCA Documents/: Overview
cone_nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cone_nav/cone_nav/: path_planner_node.py
cone_nav/config/: orbslam3_zed2i_stereo_inertial.yaml  params.yaml  viz.rviz
cone_nav/launch/: real.launch.py  sim.launch.py
cone_nav/models/: README.md
cone_nav/rviz/: viz.rviz
cone_nav/src/: cone_detector_node.cpp  cone_localizer_node.cpp  pure_pursuit_node.cpp
cone_nav/urdf/: f1tenth_base.urdf.xacro
cpp_path_planning_code/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
cpp_path_planning_code/install/path_planner/include/path_planner/: delaunay_planner.hpp
cpp_path_planning_code/install/path_planner/lib/: libdelaunay_planner.dylib
cpp_path_planning_code/install/path_planner/lib/path_planner/: planner_node
cpp_path_planning_code/install/path_planner/share/path_planner/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
cpp_path_planning_code/install/path_planner/share/path_planner/cmake/: ament_cmake_export_targets-extras.cmake  export_path_plannerExport-noconfig.cmake  export_path_plannerExport.cmake
cpp_path_planning_code/install/path_planner/share/path_planner/config/: vehicle_params.yaml
cpp_path_planning_code/install/path_planner/share/path_planner/launch/: fsae_autonomous.launch.py
cpp_path_planning_code/install/pure_pursuit/include/pure_pursuit/: pure_pursuit.hpp
cpp_path_planning_code/install/pure_pursuit/lib/: libpure_pursuit_lib.dylib
cpp_path_planning_code/install/pure_pursuit/lib/pure_pursuit/: controller_node
cpp_path_planning_code/install/pure_pursuit/share/ament_index/resource_index/package_run_dependencies/: pure_pursuit
cpp_path_planning_code/install/pure_pursuit/share/pure_pursuit/: package.dsv  package.ps1  package.sh  package.xml
cpp_path_planning_code/install/pure_pursuit/share/pure_pursuit/cmake/: export_pure_pursuitExport-noconfig.cmake  export_pure_pursuitExport.cmake
cpp_path_planning_code/log/: latest_build
cpp_path_planning_code/src/path_planner/: CMakeLists.txt
cpp_path_planning_code/src/path_planner/src/: delaunay_planner.cpp  planner_node.cpp
cpp_path_planning_code/src/pure_pursuit/: CMakeLists.txt
cpp_path_planning_code/src/pure_pursuit/src/: controller_node.cpp  pure_pursuit.cpp
tools/: render_sim_preview.py
