<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>1.0.0</version>
  <description>
    Pure Pursuit path-following controller for FSAE autonomous racing.
    
    Features:
    - Adaptive lookahead based on velocity
    - Curvature feedforward for improved tracking
    - PID speed control with anti-windup
    - Ackermann and Twist command output
  </description>
  
  <maintainer email="team@fsae.edu">FSAE Team</maintainer>
  <license>MIT</license>
  
  <author>FSAE Autonomous Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
